[package]
name = "rmreco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

bytes = "1"
crc = "3"
deku = { git = "https://github.com/sharksforarms/deku.git", branch = "sharksforarms/temp-write" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

tokio = { version = "1.29", features = ["net", "rt", "sync"], optional = true }
tokio-serial = { version = "5.4", optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
futures-util = { version = "0.3", optional = true }

serialport = { version = "4.2", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

[features]
tokio_client = ["dep:tokio", "dep:tokio-serial", "dep:tokio-stream", "dep:tokio-util", "dep:futures-util"]
blocking_client = ["dep:serialport", "dep:crossbeam-channel"]
